fix: style overlap

--- a/src/components/navbar/style.module.scss
+++ b/src/components/navbar/style.module.scss
@@ -34,6 +34,7 @@
         color: #fff;
         text-decoration: none;
         position: relative;
+        @include uppercase;
         @include underlined-effect;
       }
     }
@@ -65,13 +66,6 @@
       background: pink;
       padding: 1rem;
       gap: 1rem;
-      li {
-        margin-bottom: 1rem;
-
-        &:last-child {
-          margin-bottom: 0;
-        }
-      }
     }
   }
 
