--- a/src/components/styles/shared-styles.scss
+++ b/src/components/styles/shared-styles.scss
@@ -18,3 +18,7 @@
     transform: scaleX(1);
   }
 }
+
+@mixin uppercase {
+  text-transform: uppercase;
+}
